<resources>
    <string name="app_name">Weather</string>
    <string name="weatheractivity">Жизненный цикл WeatherActivity!</string>
    <string name="other">Other</string>
    <string name="cretae_action">Create action</string>
    <string name="fullname">Fullname</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="big_temp_default">+18</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">DONE</string>
    <string name="action_add">Add</string>
    <string name="action_category">Category</string>
    <string name="select">Select</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="Add">Добавить</string>
    <string name="Clear">Очистить</string>
    <string name="code">Code</string>
    <string name="phonenumber">Phone number</string>
    <string name="alert_title_registration">Registration</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_ok">Ok</string>
    <string name="accept">Accept</string>
    <string name="channel_name">SmsReceiver</string>
    <string name="channel_description">Getter channelId</string>
</resources>
