<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_category"
        android:orderInCategory="100"
        android:title="@string/action_category"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info_outline_white_24dp"
        android:title="@string/action_settings"
        app:showAsAction="always|withText" />

    <group
        android:checkableBehavior="all">
        <item
            android:id="@+id/action_select"
            android:title="@string/select" />
    </group>

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_one"
            android:title="@string/one" />
        <item
            android:id="@+id/action_two"
            android:title="@string/two" />
    </group>
</menu>
