<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_phonenumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding_small"
        android:layout_marginEnd="@dimen/default_padding_small"
        android:layout_marginStart="@dimen/default_padding_small"
        android:layout_marginTop="@dimen/default_padding"
        android:inputType="text"
        android:hint="@string/phonenumber"/>

    <EditText
        android:id="@+id/et_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_padding_small"
        android:layout_marginEnd="@dimen/default_padding_small"
        android:layout_marginStart="@dimen/default_padding_small"
        android:layout_marginTop="@dimen/default_padding"
        android:inputType="text"
        android:hint="@string/code"/>
    <Button
        android:id="@+id/accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        />
</LinearLayout>